<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2048</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="game_2048">2048</string>
    <string name="games">Games</string>
    <string name="players">Players</string>
    <string name="start_game">Start Game</string>
    <string name="title_activity_sign_in">SignInActivity</string>
   	<string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Join Game</string>
    <string name="statistics">Statistics</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="high_score">High score</string>
    <string name="total_games">Total games</string>
    <string name="total_score">Total score</string>
    <string name="title_activity_hosts">HostsActivity</string>
    <string name="title_activity_lobby">LobbyActivity</string>
    <string name="title_activity_create_game">CreateGameActivity</string>
    <string name="title_activity_game">GameActivity</string>
	
</resources>
