<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:gravity="center_vertical"
    android:background="#1D88AF">

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:hint="@string/username"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:hint="@string/password"
        android:ems="10" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:hint="@string/confirm_password"
        android:ems="10" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:text="@string/sign_up" />
    
</LinearLayout>



