<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:gravity="center_vertical"
    android:background="#1D88AF">

    <TextView
        android:id="@+id/textViewHighScore"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:gravity="center_horizontal"
        android:text="@string/high_score"
        android:textAppearance="@style/AppBaseTheme"
        android:textSize="30sp"
        android:textStyle="italic" />
    
     <TextView
        android:id="@+id/textViewTotalGames"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:gravity="center_horizontal"
        android:text="@string/total_games"
        android:textAppearance="@style/AppBaseTheme"
        android:textSize="30sp"
        android:textStyle="italic" />
     
      <TextView
        android:id="@+id/textViewTotalScore"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:gravity="center_horizontal"
        android:text="@string/total_score"
        android:textAppearance="@style/AppBaseTheme"
        android:textSize="30sp"
        android:textStyle="italic" />

</LinearLayout>